# gpu-dashboard

./: .gitignore  README.md  gpu  gpu_runner.py  gpu_runner_web_interface.py  gpu_utils.py  locking.py  machine.py  pyproject.toml  setup_mongo.py  ssh.py  tf_utils.py  tmux_gpu_info.py  utils.py
frontend/: gpu_runner_frontend.py
frontend/templates/: dashboard.html  login.html  main.html
templates/: add_machine.html  dashboard.html
web/: gpu_runner_web_interface.py
web/templates/: add_machine.html  dashboard.html  login.html
